--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
       <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
+  
+    <dependency>
+      <groupId>me.jinghong</groupId>
+      <artifactId>utils</artifactId>
+      <version>2.0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
